# drf-api

./: .gitignore  README.md  db.sqlite3  pyproject.toml
articles/: admin.py  models.py  serializer.py  tests.py  urls.py  views.py
articles/migrations/: 0001_initial.py
news_project/: settings.py  urls.py
